--- a/src/TechJobs/Views/Job/Index.cshtml
+++ b/src/TechJobs/Views/Job/Index.cshtml
@@ -2,8 +2,49 @@
 // TODO #2.1- declare the ViewModel (outside of this @{ } block)
 }
 
-<table class="job-listing">
+@using TechJobs.Models
+@model Job
+
+
+
+
     @{ 
 // TODO #2.2 - display the job fields, one per row (outside of this @{ } block)
     }
-</table>
+    
+    <table class="job-listing">
+        <tr>
+            <th>Name</th>
+            <td>@Model.Name</td>
+        </tr>
+        <tr>
+            <th>Employer</th>
+            <td>@Model.Employer</td>
+        </tr>
+        <tr>
+            <th>Location</th>
+            <td>@Model.Location</td>
+        </tr>
+        <tr>
+            <th>Skill</th>
+            <td>@Model.CoreCompetency</td>
+        </tr>
+        <tr>
+            <th>Position Type</th>
+            <td>@Model.PositionType</td>
+        </tr>
+    </table>
+
+    @{/* @foreach (var property in ViewData.ModelMetadata.Properties)
+            {
+                <tr>
+                    <th>@property.PropertyName</th>
+                    <td>@</td>
+                </tr>
+
+            }
+            */
+    }
+
+
+
